--- a/style.css
+++ b/style.css
@@ -1,25 +1,57 @@
+body {
+  font-family: Arial, Helvetica, sans-serif;
+}
+.navegation {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-around;
+  background-color: rgb(131, 125, 125);
+  height:30px ;
+  color: white;
+  
+}
+.title {
+  display: flex;
+  flex-wrap: wrap;
+  margin-left: 255px;
+  
+}
+.titulo-h1 {
+  margin-top: 30px;
+}
+label {
+  margin-top: 37px;
+  margin-left: 40px;
+}
 .container {
   display: flex;
   justify-content: space-around;
   width: 100%;
+  background-color: rgb(204, 196, 196);
+  margin: 0px;
+  padding-right: 0px
 }
 
+
 .items {
+  
   display: flex;
-  flex-basis: 70%;
+  flex-basis: 100%;
   flex-wrap: wrap;
-  justify-content: center;
+  justify-content:center;
+  
 }
 
 .item {
-  border: 2px solid blue;
+  
   border-radius: 5px;
   box-sizing: border-box;
   display: flex;
-  flex-direction: column;
+  flex-direction:column ;
   height: auto;
-  margin: 5px;
-  width: 200px;
+  margin: 10px;
+  width: 170px
+  
 }
 
 .item .item__sku {
@@ -36,22 +68,37 @@
   width: 100%;
 }
 
-.item .item__add {
+  .item .item__add {
   background-color: green;
   border: 0;
   cursor: pointer;
-  margin: 0;
-  padding: 5px;
+  margin-top: 10px;
+  margin-block-end: 10px;
 }
 
 .cart {
   display: flex;
   flex-basis: 30%;
   flex-flow: column wrap;
+  background-color:rgb(131, 125, 125);
+  color: white;
 }
-
 .cart .cart__title {
   flex-basis: 1;
   font-size: 16pt;
   text-align: center;
+  
+}
+.cart__title{
+  font-size: 15px;
+  color: rgb(32, 32, 32);
+  font-weight: bold;
+}
+.cart__item{
+  margin-top: 15px;
+}
+p {
+  background-color: red;
+  width: 100%;
+  height: 30px;
 }
